<resources>
    <string name="app_name">Foca</string>
    <string name="alreadyhaveanaccount">already have an account?</string>
    <string name="atleast6characters">Password (at least 6 characters)</string>
    <string name="Cart">Cart</string>
    <string name="Confirm">Confirm</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Congrats">Congrats!</string>
    <string name="CreateAccount">Create Account</string>
    <string name="Chat">Chat</string>
    <string name="Chooseyourlanguage">Choose your language</string>
    <string name="DeliverFavoriteFood">Deliver Favorite Food</string>
    <string name="Enter4digit">Enter 4-digit \nVerification code</string>
    <string name="Entermessage">Enter message</string>
    <string name="EnteryourstudentIDtoresetyourpassword">Enter your student ID to reset your password</string>
    <string name="Fillinyourbiotogetstarted">Fill in your bio to get \nstarted</string>
    <string name="Finish">Finish</string>
    <string name="FirstName">First Name</string>
    <string name="Forgotpassword">Forgot password?</string>
    <string name="GeneralSettings">General Settings</string>
    <string name="Home">Home</string>
    <string name="Language">Language</string>
    <string name="LastName">Last Name</string>
    <string name="Letchooseacoolname">Let\'s choose a cool name \nand profile picture to show everyone</string>
    <string name="Leteat">Let\'s eat</string>
    <string name="LogOut">Log Out</string>
    <string name="Login">Login</string>
    <string name="LoginNow">Login Now!</string>
    <string name="LoginToYourAccount">Login To Your Account</string>
    <string name="ManageYourFoodsOrders">Manage Your Foods &amp; Orders</string>
    <string name="Menu">Menu</string>
    <string name="Message">Message</string>
    <string name="MyMenu">My Menu</string>
    <string name="MyOrders">My Orders</string>
    <string name="NewestFoods">Newest Foods</string>
    <string name="NewPassword">New Password</string>
    <string name="Onemorestep">One more step to finish and don\'t \nforget your account :)</string>
    <string name="Order">Orders</string>
    <string name="Orderdetails">Order details</string>
    <string name="Password">Password</string>
    <string name="Passwordresetsuccessful">Password reset successful</string>
    <string name="PendingOrders">Pending Orders</string>
    <string name="Profile">Profile</string>
    <string name="ProfileSettings">Profile Settings</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Resendcode">Resend code</string>
    <string name="Resetyourpasswordhere">Reset your password \nhere</string>
    <string name="Sendcode">Send code</string>
    <string name="sending...">sending…</string>
    <string name="SignupforFREE">Sign up for FREE</string>
    <string name="Signupnow">Sign up now!</string>
    <string name="Student">Student</string>
    <string name="StudentID">Student ID</string>
    <string name="SubTotal">Sub-Total</string>
    <string name="Total">Total</string>
    <string name="Viewmore">View more</string>
    <string name="Whatdoyouwanttofind">What do you want to find?</string>
    <string name="YourProfileIsReadyToUse">Your Profile Is Ready To Use</string>
    <string name="item">item(s)</string>
    <string name="PENDING">PENDING</string>
    <string name="PROCESSED">PROCESSED</string>
    <string name="COMPLETED">COMPLETED</string>
    <string name="CANCELLED">CANCELLED</string>
    <string name="Filtertheorders">Filter the orders</string>
    <string name="Qty">Qty: </string>
    <string name="Codesendto">Code send to </string>
    <string name="gm.uit.edu.vn">gm.uit.edu.vn</string>
    <string name="Extra">Surcharge</string>
    <string name="AddNew">Add New</string>
    <string name="Update">Update</string>
    <string name="FOOD">FOOD</string>
    <string name="DRINK">DRINK</string>
    <string name="CreateProduct">Create Product</string>
    <string name="UpdateProduct">Update Product</string>
    <string name="Warning">Warning</string>
    <string name="Areyousure">Are you sure you want to delete this?</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="ProductName">Product Name</string>
    <string name="Price">Price</string>
    <string name="Category">Category</string>
    <string name="Description">Description</string>
    <string name="ARRIVED">ARRIVED</string>
    <string name="ALL">ALL</string>
    <string name="Notification">Notification</string>
    <string name="Selectone">Select one</string>
    <string name="Nightmode">Night mode</string>
    <string name="YourOrder">Your order: #</string>
    <string name="UPendingNoti"> needs to be confirmed because of the extra cost</string>
    <string name="UCancelledNoti"> has been cancelled</string>
    <string name="UProcessedNoti"> is in progress and will be delivered in a few minutes</string>
    <string name="UCompletedNoti"> is successful!</string>
    <string name="UArrivedorder"> is arrived. Well done!</string>
    <string name="filter">Filter</string>
    <string name="Rating">Rating</string>
    <string name="PriceRange">Price range</string>
    <string name="Sortby">Sort by</string>
    <string name="Restartapp">Your app needs to be restarted for this change to take effect</string>
    <string name="Skip">Skip</string>
    <string name="Back">Back</string>
    <string name="Next">Next</string>
    <string name="FRESHFOOD">FRESH FOOD</string>
    <string name="FAST">FAST DELIVERY</string>
    <string name="COMFY">COMFY</string>
    <string name="Weprideourselves">We pride ourselves on quality service</string>
    <string name="Asnatureteachesus">As nature teaches us</string>
    <string name="experienceityourself">Experience it yourself</string>
    <string name="Youhavenews">You have news about your order!</string>
    <string name="Youhavenewmessage">You have a new message!</string>
    <string name="Note">Note: </string>
    <string name="Findyourfavoritefood">Find your favorite food</string>
    <string name="RecentOrder">Recent Order</string>
    <string name="PopularMenu">Popular Menu</string>
    <string name="Reviews">Reviews</string>
    <string name="viewdetail">View details</string>
    <string name="Addtocart">Add to cart</string>
    <string name="PlaceMyOrder">Place My Order</string>
    <string name="Mycart">My cart</string>
    <string name="order_details">Order details</string>
    <string name="total">Total</string>
    <string name="review">Review</string>
    <string name="buyagain">Buy again</string>
    <string name="Favorite">Favorite</string>
    <string name="Myaccount">My account</string>
    <string name="Sold">Sold:</string>
    <string name="DeleteOrderMessage">DeleteOrderMessage</string>
    <string name="CreateOrderMessage">CreateOrderMessage</string>
    <string name="ReviewOrderMessage">ReviewOrderMessage</string>
    <string name="Searchresultfor">Search result for:</string>
    <string name="Mesagetone">Message notification</string>
    <string name="Ordertone">Order notification</string>
    <string name="Updateordersuccessfully">Update order successfully!</string>
    <string name="Addedtocart">Added to cart!</string>
    <string name="Createproductsuccessfully">Create product successfully!</string>
    <string name="Imagecannot">Image can not be null</string>
    <string name="Surchargecannotbeempty">Surcharge can not be empty!</string>
    <string name="ErrorNetwork">Error Network!</string>
    <string name="Paswordnotmatch">The password does not match!</string>
    <string name="Wehaveresendthecode">We have resend the code!</string>
    <string name="Deletefromfavorite">Deleted from favorite!</string>
    <string name="Addedtofavorite">Added to favorite!</string>
    <string name="Thankyou">Thank you!</string>
    <string name="Pleaserate">Please rate your orders!</string>
    <string name="Submit">Submit</string>
    <string name="Feedback">Leave Feedback</string>
</resources>