<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/Home"
        app:cnb_backgroundColor="#1A00FF60"
        app:cnb_iconColor="@color/icon_menu" />
    <item
        android:id="@+id/message"
        android:icon="@drawable/ic_message"
        android:title="@string/Message"
        app:cnb_backgroundColor="#1A00FF60"
        app:cnb_iconColor="@color/icon_menu" />
    <item
        android:id="@+id/order"
        android:icon="@drawable/ic_order"
        android:title="@string/Order"
        app:cnb_backgroundColor="#1A00FF60"
        app:cnb_iconColor="@color/icon_menu" />
    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/Menu"
        app:cnb_backgroundColor="#1A00FF60"
        app:cnb_iconColor="@color/icon_menu" />
    <item
        android:id="@+id/user"
        android:icon="@drawable/ic_user"
        android:title="@string/Profile"
        app:cnb_backgroundColor="#1A00FF60"
        app:cnb_iconColor="@color/icon_menu" />
</menu>