<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".activity.user.home.userhome.UserHomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/Findyourfavoritefood"
                android:textColor="@color/primaryTextColor"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/notifyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="25dp"
                android:background="@null"
                android:src="@drawable/ic_notification_non" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:paddingVertical="15dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:background="@drawable/orange_textfield"
                android:textColorHint="#DA6317"
                android:textSize="30sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_search"
                    android:hint="@string/Whatdoyouwanttofind"
                    android:textColorHint="#DA6317" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:background="@drawable/orange_textfield"
                android:src="@drawable/filter_icon" />
        </LinearLayout>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/advertising" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/RecentFood"
                android:textColor="@color/primaryTextColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/txtviewmoreRecentFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:background="@android:color/transparent"
                android:text="View more"
                android:textAllCaps="false"
                android:textColor="#FF7C32"
                android:textSize="15dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recentFoodRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/progress_bar1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:visibility="visible" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/PopularMenu"
                android:textColor="@color/primaryTextColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/txtViewmorePopularmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:background="@android:color/transparent"
                android:text="@string/Viewmore"
                android:textAllCaps="false"
                android:textColor="#FF7C32"
                android:textSize="15dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_bar2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/foodRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp" />
        </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>